--- a/Makefile.mac
+++ b/Makefile.mac
@@ -1,6 +1,8 @@
 CC=clang
 INCPATH=./src
-CFLAGS=-g -O0 -Wall -fPIC -I${INCPATH} -std=c99 -fvisibility=hidden
+OPTFLAGS=-O4
+MODE=release
+CFLAGS=${OPTFLAGS} -Wall -fPIC -I${INCPATH} -std=c99 -fvisibility=hidden
 RM=rm -rf
 MKDIR=mkdir -p
 OBJDIR=./obj
@@ -8,8 +10,8 @@ BINDIR=./bin
 SRC=./src
 OBJS=${OBJDIR}/crc32.o ${OBJDIR}/md4.o ${OBJDIR}/md5.o ${OBJDIR}/sha1.o
 
-ifeq (${MAKECMDGOALS}, macrelease)
-	CFLAGS=-O4 -Wall -I${INCPATH}
+ifeq (${MODE}, debug)
+	OPTFLAGS=-g -O0
 endif
 
 none: ;
